[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://World/World.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Hopper/Hopper.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Floater/Floater.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/UI/Healthbar/Healthbar.tscn" type="PackedScene" id=5]
[ext_resource path="res://World/NPC/NPC.tscn" type="PackedScene" id=6]
[ext_resource path="res://World/It/It.tscn" type="PackedScene" id=7]
[ext_resource path="res://World/UI/Font.tres" type="DynamicFont" id=8]

[node name="World" type="Node2D"]
script = ExtResource( 2 )
num_scenery = 1000
difficulty = 1

[node name="Background" type="ColorRect" parent="."]
visible = false
margin_left = -1525.16
margin_top = -46.0266
margin_right = 853.839
margin_bottom = 336.973
color = Color( 0.768627, 0.580392, 0.376471, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Entities" type="YSort" parent="."]
position = Vector2( -1.36224, 0 )

[node name="ItEnemies" type="YSort" parent="Entities"]

[node name="Hopper" parent="Entities/ItEnemies" instance=ExtResource( 3 )]
position = Vector2( 57.159, 110.233 )
frame = 1

[node name="Floater" parent="Entities/ItEnemies" instance=ExtResource( 4 )]
position = Vector2( 51.3903, 169.585 )
frame = 8

[node name="NPC" parent="Entities" instance=ExtResource( 6 )]
position = Vector2( 242.811, 136.812 )
frame = 6
speed = 15.0

[node name="Player" parent="Entities" instance=ExtResource( 1 )]
position = Vector2( 140.801, 140.459 )
animation = "idle"
frame = 0
max_health = 5.0

[node name="Scenery" type="YSort" parent="Entities"]

[node name="It" parent="Entities" instance=ExtResource( 7 )]
position = Vector2( 220.95, 138.795 )
frame = 0
health = 3
speed = 15

[node name="PlayerEnemies" type="YSort" parent="Entities"]

[node name="MainCamera" type="Camera2D" parent="."]
position = Vector2( 790.419, -69.7352 )
current = true
__meta__ = {
"_edit_lock_": true
}

[node name="Control" type="Control" parent="MainCamera"]
margin_left = -240.0
margin_top = -135.0
margin_right = 240.0
margin_bottom = 134.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="GameOverMessage" type="Label" parent="MainCamera/Control"]
visible = false
margin_left = 2.0
margin_top = 34.0
margin_right = 479.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 8 )
text = "game over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Healthbar" parent="MainCamera/Control" instance=ExtResource( 5 )]
margin_left = 3.42491
margin_top = 3.08579
margin_right = 3.42493
margin_bottom = 3.08578
[connection signal="health_updated" from="Entities/Player" to="MainCamera/Control/Healthbar" method="_on_Player_health_updated"]
[connection signal="new_max_health" from="Entities/Player" to="MainCamera/Control/Healthbar" method="_on_Player_new_max_health"]
